fix(shared): harden exclusive window presentation lease