@@ -1,7 +1,9 @@
 package org.graphiks.kffi.objc.appkit
 
+import java.io.File
 import java.lang.foreign.MemorySegment
 import java.lang.foreign.ValueLayout
+import java.util.concurrent.TimeUnit
 import org.graphiks.kffi.objc.NSThread
 import org.graphiks.kffi.objc.NSWindow
 import org.graphiks.kffi.objc.ObjCRuntime
@@ -46,7 +48,7 @@ class ExclusiveWindowPresentationTest {
 
     @Test
     fun wrongThreadDoesNotTouchTheWindow() {
-        val fake = FakeWindowNative(mainThread = false)
+        val fake = FakeWindowNative(initialMainThread = false)
 
         val result = ExclusiveWindowPresentationServices.open(WINDOW, fake)
 
@@ -225,7 +227,7 @@ class ExclusiveWindowPresentationTest {
                 displayId = INITIAL_DISPLAY_ID,
                 level = INITIAL_LEVEL,
             ),
-            lease.readback(),
+            assertIs<ExclusiveWindowPresentationReadbackResult.Readback>(lease.readback()).value,
         )
         assertFalse(fake.calls.any { it == "borderless" || it.startsWith("frame:") || it == "shielding-level" })
         lease.restore()
@@ -234,24 +236,86 @@ class ExclusiveWindowPresentationTest {
     @Test
     fun macOsSmokeOnlyOpensAndReadsDetachedState() {
         assumeTrue(System.getProperty("os.name").contains("Mac", ignoreCase = true))
-        assumeTrue((System.getProperty("os.version").substringBefore('.').toIntOrNull() ?: 0) >= 26)
-        assumeTrue(NSThread.isMainThread(), "AppKit smoke must run on the native main thread")
+        val process = ProcessBuilder(
+            File(System.getProperty("java.home"), "bin/java").path,
+            "-XstartOnFirstThread",
+            "--enable-native-access=ALL-UNNAMED",
+            "-cp",
+            System.getProperty("java.class.path"),
+            ExclusiveWindowPresentationSmokeProbe::class.java.name,
+        ).redirectErrorStream(true).start()
+        assertTrue(process.waitFor(30, TimeUnit.SECONDS), "exclusive window presentation smoke timed out")
+        assertEquals(0, process.exitValue(), process.inputStream.bufferedReader().readText())
+    }
 
-        ObjCRuntime.autoreleasePool {
-            val window = NSWindow(NSWindow(alloc("NSWindow")).init())
-            try {
-                val lease = assertIs<ExclusiveWindowPresentationOpenResult.Opened>(
-                    ExclusiveWindowPresentationServices.open(window),
-                ).lease
+    @Test
+    fun everyLeaseOperationRejectsWrongThreadWithoutTouchingAppKit() {
+        val fake = FakeWindowNative()
+        val lease = open(fake)
+        fake.calls.clear()
+        fake.mainThread = false
 
-                val readback = lease.readback()
+        assertEquals(ExclusiveWindowPresentationResult.WrongThread, lease.present(DISPLAY_ID))
+        assertEquals(ExclusiveWindowPresentationReadbackResult.WrongThread, lease.readback())
+        assertEquals(ExclusiveWindowPresentationRestoreResult.WrongThread, lease.restore())
+        assertEquals(ExclusiveWindowPresentationRestoreResult.WrongThread, lease.close())
+        assertTrue(fake.calls.isEmpty())
+    }
 
-                assertTrue(readback.styleMask >= 0L)
-                lease.close()
-            } finally {
-                window.close()
-            }
-        }
+    @Test
+    fun leaseRetainsTheNativeWindowUntilCompleteRestoration() {
+        val fake = FakeWindowNative()
+        val lease = open(fake)
+
+        assertEquals(1, fake.ownedWindowCount)
+        assertIs<ExclusiveWindowPresentationRestoreResult.Restored>(lease.restore())
+
+        assertEquals(0, fake.ownedWindowCount)
+        assertEquals(1, fake.releaseCount)
+    }
+
+    @Test
+    fun finalReadbackMismatchKeepsOnlyTheDivergentComponentOutstanding() {
+        val fake = FakeWindowNative(keepRestoredFrame = true)
+        val lease = open(fake)
+        assertIs<ExclusiveWindowPresentationResult.Presented>(lease.present(DISPLAY_ID))
+        fake.calls.clear()
+
+        val partial = assertIs<ExclusiveWindowPresentationRestoreResult.PartiallyRestored>(lease.restore())
+
+        assertEquals(
+            listOf(
+                ExclusiveWindowPresentationFailure(
+                    ExclusiveWindowPresentationOperation.VerifyRestorationFrame,
+                    "restored frame did not match the opening snapshot",
+                ),
+            ),
+            partial.failures,
+        )
+        assertEquals(listOf("restore-style", "restore-frame", "restore-level", "readback:42"), fake.calls)
+        fake.calls.clear()
+
+        assertIs<ExclusiveWindowPresentationRestoreResult.Restored>(lease.restore())
+        assertEquals(listOf("restore-frame", "readback:17"), fake.calls)
+    }
+
+    @Test
+    fun readbackReportsWindowGoneFailureAndClosedWithoutLeakingNativeExceptions() {
+        val fake = FakeWindowNative()
+        val lease = open(fake)
+        fake.windowExists = false
+
+        assertEquals(ExclusiveWindowPresentationReadbackResult.WindowGone, lease.readback())
+        assertEquals(ExclusiveWindowPresentationReadbackResult.Closed, lease.readback())
+
+        val failing = FakeWindowNative().also { it.failReadback = true }
+        val failingLease = open(failing)
+        assertEquals(
+            ExclusiveWindowPresentationReadbackResult.Failed(
+                ExclusiveWindowPresentationFailure(ExclusiveWindowPresentationOperation.Readback, "readback failed"),
+            ),
+            failingLease.readback(),
+        )
     }
 
     private fun open(fake: FakeWindowNative): ExclusiveWindowPresentationLease =
@@ -266,29 +330,69 @@ class ExclusiveWindowPresentationTest {
     ) as MemorySegment
 }
 
+object ExclusiveWindowPresentationSmokeProbe {
+    @JvmStatic
+    fun main(args: Array<String>) {
+        ObjCRuntime.autoreleasePool {
+            check(NSThread.isMainThread()) { "exclusive presentation smoke requires the native main thread" }
+            val window = NSWindow(NSWindow(alloc("NSWindow")).init())
+            try {
+                when (val opened = ExclusiveWindowPresentationServices.open(window)) {
+                    ExclusiveWindowPresentationOpenResult.UnavailablePlatform -> Unit
+                    is ExclusiveWindowPresentationOpenResult.Opened -> {
+                        check(opened.lease.readback() is ExclusiveWindowPresentationReadbackResult.Readback)
+                        check(opened.lease.close() is ExclusiveWindowPresentationRestoreResult.Restored)
+                    }
+                    else -> error("unexpected exclusive presentation smoke result: $opened")
+                }
+            } finally {
+                window.close()
+            }
+        }
+    }
+
+    private fun alloc(className: String): MemorySegment = ObjCRuntime.msgSend(
+        ValueLayout.ADDRESS,
+        ObjCRuntime.getClass(className),
+        ObjCRuntime.sel("alloc"),
+    ) as MemorySegment
+}
+
 private class FakeWindowNative(
     private val macOs26OrLater: Boolean = true,
-    private val mainThread: Boolean = true,
+    initialMainThread: Boolean = true,
     private val screenAvailable: Boolean = true,
     private val forcedReadbackDisplayId: Int? = null,
     private val presentationReadbackStyleMask: Long? = null,
+    private val keepRestoredFrame: Boolean = false,
 ) : ExclusiveWindowPresentationNative {
     val calls = mutableListOf<String>()
     val callsAfterRestore: List<String>
         get() = calls.dropWhile { it !in setOf("restore-style", "restore-frame", "restore-level") }
 
+    var mainThread = initialMainThread
     var windowExists = true
     var readbackStyleMask = INITIAL_STYLE
     var readbackDisplayId = INITIAL_DISPLAY_ID
     var readbackFrame = INITIAL_FRAME
     var readbackLevel = INITIAL_LEVEL
     var failRestoreStyle = false
+    var failReadback = false
+    var ownedWindowCount = 0
+    var releaseCount = 0
+    var suppressNextRestoreFrame = keepRestoredFrame
 
     override fun isMacOs26OrLater(): Boolean = macOs26OrLater
 
     override fun isMainThread(): Boolean = mainThread
 
-    override fun snapshot(window: Long): ExclusiveWindowPresentationSnapshot {
+    override fun retainWindow(window: Long): ExclusiveWindowPresentationWindow {
+        requireWindow()
+        ownedWindowCount += 1
+        return FakeWindow(window)
+    }
+
+    private fun snapshot(): ExclusiveWindowPresentationSnapshot {
         requireWindow()
         calls += "snapshot"
         return ExclusiveWindowPresentationSnapshot(
@@ -299,34 +403,35 @@ private class FakeWindowNative(
         )
     }
 
-    override fun screen(displayId: Int): ExclusiveWindowPresentationScreen? {
+    private fun screen(displayId: Int): ExclusiveWindowPresentationScreen? {
         requireWindow()
         calls += "screen:$displayId"
         return TARGET_SCREEN.takeIf { screenAvailable && displayId == DISPLAY_ID }
     }
 
-    override fun presentBorderless(window: Long) {
+    private fun presentBorderless() {
         requireWindow()
         calls += "borderless"
         readbackStyleMask = presentationReadbackStyleMask ?: BORDERLESS_STYLE
     }
 
-    override fun presentFrame(window: Long, screen: ExclusiveWindowPresentationScreen) {
+    private fun presentFrame(screen: ExclusiveWindowPresentationScreen) {
         requireWindow()
         calls += "frame:${screen.displayId}"
         readbackDisplayId = screen.displayId
         readbackFrame = screen.frame
     }
 
-    override fun presentShieldingLevel(window: Long): Long {
+    private fun presentShieldingLevel(): Long {
         requireWindow()
         calls += "shielding-level"
         readbackLevel = SHIELDING_LEVEL
         return SHIELDING_LEVEL
     }
 
-    override fun readback(window: Long): ExclusiveWindowPresentationReadback {
+    private fun readback(): ExclusiveWindowPresentationReadback {
         requireWindow()
+        if (failReadback) throw IllegalStateException("readback failed")
         val displayId = forcedReadbackDisplayId ?: readbackDisplayId
         calls += "readback:$displayId"
         return ExclusiveWindowPresentationReadback(
@@ -337,7 +442,7 @@ private class FakeWindowNative(
         )
     }
 
-    override fun restoreStyle(window: Long, styleMask: Long) {
+    private fun restoreStyle(styleMask: Long) {
         requireWindow()
         calls += "restore-style"
         if (failRestoreStyle) {
@@ -347,14 +452,18 @@ private class FakeWindowNative(
         readbackStyleMask = styleMask
     }
 
-    override fun restoreFrame(window: Long, frame: CGDisplayBoundsSnapshot) {
+    private fun restoreFrame(frame: CGDisplayBoundsSnapshot) {
         requireWindow()
         calls += "restore-frame"
-        readbackDisplayId = INITIAL_DISPLAY_ID
-        readbackFrame = frame
+        if (suppressNextRestoreFrame) {
+            suppressNextRestoreFrame = false
+        } else {
+            readbackDisplayId = INITIAL_DISPLAY_ID
+            readbackFrame = frame
+        }
     }
 
-    override fun restoreLevel(window: Long, level: Long) {
+    private fun restoreLevel(level: Long) {
         requireWindow()
         calls += "restore-level"
         readbackLevel = level
@@ -364,6 +473,33 @@ private class FakeWindowNative(
         if (!windowExists) {
             calls += "window-gone"
             throw ExclusiveWindowPresentationWindowGoneException()
+        }
+    }
+
+    private inner class FakeWindow(
+        override val identity: Long,
+    ) : ExclusiveWindowPresentationWindow {
+        override fun snapshot(): ExclusiveWindowPresentationSnapshot = this@FakeWindowNative.snapshot()
+
+        override fun screen(displayId: Int): ExclusiveWindowPresentationScreen? = this@FakeWindowNative.screen(displayId)
+
+        override fun presentBorderless() = this@FakeWindowNative.presentBorderless()
+
+        override fun presentFrame(screen: ExclusiveWindowPresentationScreen) = this@FakeWindowNative.presentFrame(screen)
+
+        override fun presentShieldingLevel(): Long = this@FakeWindowNative.presentShieldingLevel()
+
+        override fun readback(): ExclusiveWindowPresentationReadback = this@FakeWindowNative.readback()
+
+        override fun restoreStyle(styleMask: Long) = this@FakeWindowNative.restoreStyle(styleMask)
+
+        override fun restoreFrame(frame: CGDisplayBoundsSnapshot) = this@FakeWindowNative.restoreFrame(frame)
+
+        override fun restoreLevel(level: Long) = this@FakeWindowNative.restoreLevel(level)
+
+        override fun close() {
+            ownedWindowCount -= 1
+            releaseCount += 1
         }
     }
 }
